# wave

./: Cargo.toml  build.rs  dev_record.txt  dev_recordtxt  rust.md
blue/: .gitignore  Cargo.toml
blue/src/: alloc.rs  lib.rs  list.rs
blue/src/bounds/: aabb.rs  intersect_data.rs  mod.rs  sphere.rs
blue/src/math/: mod.rs  vec3f.rs
blue/src/octree/: bound.rs  mod.rs
book/ch13_closures_iterators/: Cargo.toml
book/ch13_closures_iterators/src/: main.rs
book/ch15_smart_ptr/: Cargo.toml
book/ch15_smart_ptr/src/: inner.rs  main.rs  mgr.rs
book/ch19_senior_feature/: Cargo.toml  core
book/ch19_senior_feature/src/: main.rs  senior_func.rs  senior_trait.rs  senior_type.rs  unsafe_rust.rs
book/ch20_web_svr/: Cargo.toml
book/ch20_web_svr/src/: main.rs
control/src/: main.rs
lessons/ch00_KV/: Cargo.toml
lessons/ch00_KV/src/: command.rs  main.rs
lessons/ch01_memory/: Cargo.toml
lessons/ch01_memory/src/: main.rs
lessons/ch03_rust_first/: Cargo.toml
lessons/ch03_rust_first/src/: main.rs
lessons/ch04_cli/: Cargo.toml
lessons/ch04_cli/src/: main.rs
lessons/ch05_img_svr/: Cargo.toml  abi.proto  buils.rs
lessons/ch05_img_svr/src/: main.rs
libs/my_macro/: Cargo.toml
libs/my_macro/examples/: gen.rs  sql.rs
libs/my_macro/fixture/: person.json
libs/my_macro/src/: json_scheme.rs  lib.rs
libs/recast_nav/: CMakeLists.txt
libs/recast_nav/RecastNav/include/: RecastNavHelper.h
libs/recast_nav/RecastNav/source/: RecastNav.cpp
libs/recast_nav/include/: RecastNav.h
libs/recast_nav/source/: RecastNav.cpp  RecastNavHelper.cpp
proto/: gate.proto  login.proto  role.proto
sqlite/: wave_config.db  wave_data.db
src/: alloc.rs  component.rs  entity.rs  error.rs  ffi.rs  lib.rs  main.rs
src/bot/: bot.rs  gate_bot.rs  login_bot.rs  mod.rs
src/center/: center_svr.rs  mod.rs
src/cfg/: mod.rs
src/gate/: gate.rs  gate_svr.rs  mod.rs
src/lesson/: ch01_memory.rs  ch02_concept.rs  ch03_first.rs  ch04_CLI.rs  mod.rs
src/login/: anonym_task.rs  login_svr.rs  mod.rs  role_task.rs
src/math/: vec.rs
src/pb/: gate.rs  hello.rs  login.rs  mod.rs  role.rs
src/proxy/: proxy.rs
src/recast/: ffi.rs  mod.rs  recast.rs
src/role/: role.rs
src/scene/: mod.rs  scene_svr.rs
src/scene/physics/: aabb.rs  intersect_data.rs  mod.rs  obj.rs  octree.rs  plane.rs  sphere.rs  world.rs
src/server/: mod.rs  server.rs  svr_base.rs  svr_type.rs
src/sqlite3/: data.rs  mod.rs
src/svr/: mod.rs
src/tutorial/: ch01_usual.rs  mod.rs
src/udp/: mod.rs  udp_chat.rs
test/client/src/: main.rs
test/injured/: Cargo.toml
test/injured/src/: book.rs  main.rs
test/smart_ptr/src/: main.rs
tokio/client/: Cargo.toml
tokio/server/: Cargo.toml
(+6 files in other folders)
