
[package]
name = "wave"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = { version = "0.11", features = ["blocking"] }
html2md = "0.2"
anyhow = "1" # 错误处理
clap = "3.0.0-beta.4" # 命令行解析
colored = "2" # 命令终端多彩显示
jsonxf = "1.1" # JSON pretty print 格式化
mime = "0.3" # 处理 mime 类型
reqwest = { version = "0.11", features = ["json", "blocking"] } # HTTP 客户端
tokio = { version = "1", features = ["full"] } # 异步处理库