workspace = { members = ["lessons/ch01_memory", "lessons/ch03_rust_first", "lessons/ch04_CLI", "lessons/ch04_CLI/ch04_CLI", "lessons/ch04_cli", "lessons/ch04_img_svr"] }

[package]
name = "wave"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
