[profile.dev]
debug = true
[profile.release]
debug = true

[package]
name = "wave"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blue = {path = "./blue"}
tokio = {version = "1", features = ["full"]}
prost = "0.7" # protobuf库
prost-types = {version = "0.7", optional = true}
anyhow = "1"
sqlite  = "=0.36.0" # sqlite库
libc="0.2"
cc = "1.0" # recast_nav中用了stl
shut_up = "0.1.1"

[build-dependencies]
prost-build = "0.7"

[build]
build = "build.rs"